# ambilight-hue-pro-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  repository.yaml
.github/workflows/: release.yml  test.yml
addon/: README.md  config.yaml
ambilight_hue_bridge/: __init__.py  __main__.py  app.py  color.py  const.py  identity.py
ambilight_hue_bridge/config/: __init__.py  models.py  store.py
ambilight_hue_bridge/discovery/: __init__.py  cert.py  description.py  mdns.py  ssdp.py
ambilight_hue_bridge/emulator/: __init__.py  dtls_server.py  huestream.py  inbound.py  light_repr.py  pairing.py  rest_v1.py
ambilight_hue_bridge/engine/: __init__.py  engine.py  ingest.py  mapping.py
ambilight_hue_bridge/outbound/: __init__.py  controller.py
ambilight_hue_bridge/web/: __init__.py  server.py
ambilight_hue_bridge/web/static/: index.html
docs/: ARCHITECTURE.md
scripts/: setup.sh
tests/: __init__.py  test_app.py  test_cert.py  test_color.py  test_config_store.py  test_discovery.py  test_dtls_server.py  test_engine.py  test_huestream.py  test_identity.py  test_inbound.py  test_light_repr.py  test_main.py  test_mdns.py  test_pairing.py  test_rest_v1.py  test_smoke.py  test_ssdp.py  test_web.py
