[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.3"]

[project]
authors = [
  {name = "Marcel van der Veldt", email = "marcel.vanderveldt@openhomefoundation.org"},
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.9",
  "orjson>=3.9",
  "mashumaro>=3.13",
  "pyyaml>=6.0",
  # Outbound Hue Entertainment streaming client (DTLS/PSK + HueStream), shared with
  # Music Assistant. During local development it is installed editable from the sibling
  # checkout (see scripts/setup.sh); CI/users get it from PyPI. >=0.1.2 for remote_status(),
  # which the engine's outbound-stream health monitor needs (older versions disable it).
  "hue-entertainment>=0.1.2",
  # Hue-style self-signed TLS cert for the HTTPS listener (newer TVs connect over TLS).
  "cryptography>=42",
  # mDNS/DNS-SD advertisement of _hue._tcp so newer Hue clients can also discover us.
  "zeroconf>=0.130",
]
description = "Bridge older Philips Ambilight+Hue TVs to modern Philips Hue (V2/Pro) bridges via the Entertainment API."
license = {text = "Apache-2.0"}
name = "ambilight-hue-pro-bridge"
readme = "README.md"
requires-python = ">=3.13"
# The version is set by a GH action on release.
version = "0.0.0"

[project.optional-dependencies]
test = [
  "codespell==2.4.2",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "pre-commit-hooks==6.0.0",
  "pytest==9.0.3",
  "pytest-aiohttp==1.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.16",
]

[project.scripts]
ambilight-hue-bridge = "ambilight_hue_bridge.__main__:main"

[project.urls]
"Bug Reports" = "https://github.com/marcelveldt/ambilight-hue-pro-bridge/issues"
"Source Code" = "https://github.com/marcelveldt/ambilight-hue-pro-bridge"

[tool.codespell]
ignore-words-list = "ambilight,hass,"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
zip-safe = false

[tool.setuptools.packages.find]
include = ["ambilight_hue_bridge*"]

[tool.setuptools.package-data]
ambilight_hue_bridge = ["py.typed", "web/static/*"]

[tool.ruff]
fix = true
show-fixes = true

line-length = 100
target-version = "py313"

[tool.ruff.lint.pydocstyle]
# Sphinx-style docstrings with :param: syntax; pep257 is the base convention.
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 25
max-returns = 15
max-statements = 50

[tool.mypy]
platform = "linux"
python_version = "3.13"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
  "ANN002", # Just annoying, not really useful
  "ANN003", # Just annoying, not really useful
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "EM101", # Just annoying, not really useful
  "FIX002", # Just annoying, not really useful
  "PLR2004", # Just annoying, not really useful
  "PD011", # Just annoying, not really useful
  "S101", # assert is often used to satisfy type checking
  "TD002", # Just annoying, not really useful
  "TD003", # Just annoying, not really useful
  "TD004", # Just annoying, not really useful
  "TRY003", # Just annoying, not really useful
  "COM812", # Conflicts with the Ruff formatter
  "ISC001", # Conflicts with the Ruff formatter
  "FBT001", # Very opniated and not useful
  "A003", # Intentional: dataclass `id` fields match the Hue/CLIP resource naming
  "S104", # We intentionally bind all interfaces (LAN service / SSDP multicast)
  "ERA001", # False positives on byte-layout / documentation comments
  "TC001", # With `from __future__ import annotations`, runtime import cost is nil
  "TC003", # idem (stdlib typing-only imports)
]

select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Tests poke at private members, use magic values, and use loosely-typed fixtures.
"tests/*" = ["SLF001", "PLR2004", "ANN001"]
# The CLI prints command output to stdout.
"ambilight_hue_bridge/__main__.py" = ["T201"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["ambilight_hue_bridge"]

[tool.ruff.lint.mccabe]
max-complexity = 25
